[package]
name = "mybot"
version = "0.1.0"
edition = "2024"

[dependencies]
nonebot_rs = {path = "../nonebot_rs"}
toml = "0.9.8"
rcnb-rs = "0.1.0"
serde_json = "1.0.66"
reqwest = { version = "0.12", features = ["json","blocking"] }
base64 = "0.22.1"

[dependencies.tracing]
version = "0.1"
features = ["std"]

[dependencies.tokio]
version = "1.10.0"
features = ["sync"]


[dependencies.serde]
version = "1.0"
features = ["derive"]